<resources>
    <string name="app_name">茂乐惠机</string>
    <string name="time_hint_str">剩120秒自动关闭</string>
    <string name="RMB">￥</string>
    <string name="phoneBuy">手机购买</string>
    <string name="home_title_str">随时随地随心买正品</string>
    <string name="quick_pay_str">快付买单</string>
    <string name="search_more_goods_str">搜索更多茂业好物</string>
    <string name="print_bill_str">补打小票</string>
    <string name="print_bill_hint_str">茂乐惠快付订单扫码打印小票</string>
    <string name="deliveryway_str">配送方式</string>
    <string name="phonebuy_str">手机\n购买</string>
    <string name="warmprompt_str">温馨提示</string>
    <string name="returnhome_str">返回首页</string>
    <string name="buyimdlt_str">立即购买</string>
    <string name="addcart_str">加入购物车</string>
    <string name="phonelogin_str">手机号快捷登录</string>
    <string name="accountlogin_str">茂业会员账号登录</string>
    <string name="login_str">登录</string>
    <string name="hint_str">提示</string>
    <string name="hint_login_str">会员身份购买需使用茂业会员账号登陆，然后下单。该类订单享受会员积分；\n\n游客身份购买免登陆，直接下单，该类订单不参与会员积分。</string>
    <string name="store_pickup_str">门店自提</string>
    <string name="confirmorderinfo_str">确认订单信息</string>
    <string name="delivery_str">快递配送</string>
    <string name="submitorder">提交订单</string>
    <string name="selecrall_str">全选</string>
    <string name="cancel_str">取消</string>
    <string name="alipayhint_str">请打开【支付宝】的付款码\n对准机器下方扫码口</string>
    <string name="wxpayhint_str">请打开【微信】的付款码\n对准机器下方扫码口</string>
    <string name="number">0123456789</string>
    <string name="confirm_str">确定</string>
    <string name="add_attress_str">创建地址</string>
    <string name="close_str">关闭</string>
    <string name="save_str">保存</string>
    <string name="wechat_max_hint_str">请打开【微信】的付款码\n对准机器下方扫码口</string>
    <string name="ali_max_hint_str">请打开【支付宝】的付款码\n对准机器下方扫码口</string>
    <string name="ali_min_hint_str">使用支付宝付款</string>
    <string name="wechat_min_hint_str">使用微信付款</string>
    <string name="query_order_info_str">跟踪订单状态\n查看订单信息</string>
    <string name="succ_code_hint_str">扫描二维码\n凭借您收到的短信账号信息登录茂乐惠\n查询实时订单状态</string>
    <string name="paying_hint_str">扫描成功！支付中......\n请勿操作页面</string>
    <string name="print_bill_title_str">请打开您已领取的快付订单电子小票\n将小票底部二维码图片对准下方扫描口</string>
    <string name="address_hint_str">建议您如实填写详细收货地址，例如街道名称，门牌号\n码，楼层和房间号等信息</string>
    <string name="countDownTimer_str">剩余操作时长360秒</string>
    <string name="search_goods_str">搜索商品</string>
    <string name="back_str">返回</string>

</resources>
