<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_head" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen220"
        android:scaleType="centerCrop"
        android:src="@mipmap/default_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen96"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/accountlogin_tv"
            android:layout_width="@dimen/dimen192"
            android:layout_height="@dimen/dimen40"
            android:background="@drawable/color969696_stroke"
            android:gravity="center"
            android:text="@string/accountlogin_str"
            android:textColor="@color/color_1e1e1e"
            android:textSize="@dimen/dimen16sp" />

        <TextView
            android:id="@+id/phonelogin_tv"
            android:layout_width="@dimen/dimen192"
            android:layout_height="@dimen/dimen40"
            android:background="@color/color_dd2450"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/phonelogin_str"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen16sp" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen80"
        android:layout_marginRight="@dimen/dimen80"
        android:layout_marginTop="@dimen/dimen57"
        android:background="@null"
        android:hint="请输入购买手机号"
        android:inputType="phone"
        android:maxLines="1"
        android:paddingBottom="@dimen/dimen11"
        android:paddingTop="@dimen/dimen11"
        android:textCursorDrawable="@drawable/shap_cursor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0.5"
        android:layout_marginLeft="@dimen/dimen80"
        android:layout_marginRight="@dimen/dimen80"
        android:background="@color/color_646464" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen42"
        android:layout_marginLeft="@dimen/dimen80"
        android:layout_marginRight="@dimen/dimen80"
        android:layout_marginTop="@dimen/dimen142"
        android:background="@color/color_c8c8c8"
        android:gravity="center"
        android:text="@string/login_str"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen80"
        android:layout_marginTop="@dimen/dimen30"
        android:drawableLeft="@mipmap/hint_login"
        android:drawablePadding="@dimen/dimen4"
        android:gravity="center"
        android:text="@string/hint_str"
        android:textColor="@color/color_505050"
        android:textSize="@dimen/dimen9sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen80"
        android:layout_marginTop="@dimen/dimen10"
        android:text="@string/hint_login_str"
        android:textColor="@color/color_505050"
        android:textSize="@dimen/dimen9sp" />
</LinearLayout>